--- a/index.html
+++ b/index.html
@@ -17,19 +17,18 @@
       </div>
       <div class="card-content">
         <h6 class="pro-cat">Perfume</h6>
+        <h2 class="pro-name">Gabrielle Essence Eau De Parfum</h2>
+        <p class="pro-description">
+          A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+          Perfumer-Creator for the House of CHANEL.</p>
+        <div class="prince">
+          <p class="current-prince">$149.99</p>
+          <p class="old-prince">$169.99</p>
+        </div>
+        <button class="cta"><img src="images/icon-cart.svg" alt="icon-cart">Add to Cart</button>
       </div>
     </div>
   </div>
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
   
 </body>
 </html>
