--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -10,10 +10,10 @@
 
 </head>
 <body>
-  <div class="container">
+  <main>
     <div class="grid">
       <div class="img">
-        <img src="images/image-product-desktop.jpg">
+        <img src="images/image-product-desktop.jpg" alt="Perfume picture">
       </div>
       <div class="card-content">
         <h6 class="pro-cat">Perfume</h6>
@@ -25,9 +25,9 @@
           <p class="current-prince">$149.99</p>
           <p class="old-prince">$169.99</p>
         </div>
-        <button class="cta"><img src="images/icon-cart.svg" alt="icon-cart">Add to Cart</button>
+        <button class="cta"><img src="images/icon-cart.svg" alt="Add to buy button icon">Add to Cart</button>
       </div>
     </div>
-  </div>
+  </main>
 </body>
 </html>
